; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/serial/extr_quatech2.c_qt2_port_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/serial/extr_quatech2.c_qt2_port_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_serial_port = type { i32 }
%struct.qt2_port_private = type { %struct.qt2_port_private*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_serial_port*)* @qt2_port_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qt2_port_remove(%struct.usb_serial_port* %0) #0 {
  %2 = alloca %struct.usb_serial_port*, align 8
  %3 = alloca %struct.qt2_port_private*, align 8
  store %struct.usb_serial_port* %0, %struct.usb_serial_port** %2, align 8
  %4 = load %struct.usb_serial_port*, %struct.usb_serial_port** %2, align 8
  %5 = call %struct.qt2_port_private* @usb_get_serial_port_data(%struct.usb_serial_port* %4)
  store %struct.qt2_port_private* %5, %struct.qt2_port_private** %3, align 8
  %6 = load %struct.qt2_port_private*, %struct.qt2_port_private** %3, align 8
  %7 = getelementptr inbounds %struct.qt2_port_private, %struct.qt2_port_private* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @usb_free_urb(i32 %8)
  %10 = load %struct.qt2_port_private*, %struct.qt2_port_private** %3, align 8
  %11 = getelementptr inbounds %struct.qt2_port_private, %struct.qt2_port_private* %10, i32 0, i32 0
  %12 = load %struct.qt2_port_private*, %struct.qt2_port_private** %11, align 8
  %13 = call i32 @kfree(%struct.qt2_port_private* %12)
  %14 = load %struct.qt2_port_private*, %struct.qt2_port_private** %3, align 8
  %15 = call i32 @kfree(%struct.qt2_port_private* %14)
  ret i32 0
}

declare dso_local %struct.qt2_port_private* @usb_get_serial_port_data(%struct.usb_serial_port*) #1

declare dso_local i32 @usb_free_urb(i32) #1

declare dso_local i32 @kfree(%struct.qt2_port_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
